@@ -27,6 +27,7 @@ import java.util.Map.Entry;
 import java.util.NavigableSet;
 import java.util.Set;
 import java.util.TreeMap;
+import java.util.stream.Collectors;
 
 import org.voltdb.BackendTarget;
 import org.voltdb.StartAction;
@@ -100,8 +101,8 @@ public class CommandLine extends VoltDB.Configuration
         cl.m_versionCompatibilityRegexOverrideForTest = m_versionCompatibilityRegexOverrideForTest;
         cl.m_buildStringOverrideForTest = m_buildStringOverrideForTest;
         cl.m_forceVoltdbCreate = m_forceVoltdbCreate;
-        cl.m_userSchema = m_userSchema;
-        cl.m_stagedClassesPath = m_stagedClassesPath;
+        cl.m_userSchemas = m_userSchemas;
+        cl.m_stagedClassesPaths = m_stagedClassesPaths;
 
         // second, copy the derived class fields
         cl.includeTestOpts = includeTestOpts;
@@ -554,7 +555,6 @@ public class CommandLine extends VoltDB.Configuration
             cmdline.add("-Xloggc:"+ volt_root + "/" + VEM_GC_ROLLOVER_FILE_NAME+" -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles="+VEM_GC_ROLLOVER_FILE_COUNT+" -XX:GCLogFileSize="+VEM_GC_ROLLOVER_FILE_SIZE);
         }
         cmdline.add(maxHeap);
-        cmdline.add("-XX:+UseParNewGC");
         cmdline.add("-XX:+UseConcMarkSweepGC");
         cmdline.add("-XX:+CMSParallelRemarkEnabled");
         cmdline.add("-XX:+UseTLAB");
@@ -740,8 +740,9 @@ public class CommandLine extends VoltDB.Configuration
             cmdline.add("license"); cmdline.add(m_pathToLicense);
         }
 
-        if (m_userSchema != null) {
-            cmdline.add("schema"); cmdline.add(m_userSchema.getAbsolutePath());
+        if (m_userSchemas != null) {
+            cmdline.add("schema");
+            cmdline.add(m_userSchemas.stream().map(File::getAbsolutePath).collect(Collectors.joining(",")));
         }
 
         if (customCmdLn != null && !customCmdLn.trim().isEmpty())
